<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10sp"
    >
    <TextView
        android:id="@+id/txtNum"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:background="@color/backgroundCalculator"

        android:gravity="right|bottom"
        android:layout_marginBottom="10dp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:onClick="onClickButton"

            android:text="@string/Seven"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onClickButton"

            android:text="@string/Eight"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="onClickButton"

            android:text="@string/Nine"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="onOperator"

            android:text="@string/Divide"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"

        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:onClick="onClickButton"

            android:text="@string/Four"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:onClick="onClickButton"

            android:text="@string/Five"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"

        />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:onClick="onClickButton"

            android:text="@string/Six"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
            android:backgroundTint="@color/btnNumbers"
        />

        <Button
            android:id="@+id/btnMultiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperator"

            android:text="@string/Multiple"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
            android:backgroundTint="@color/btnNumbers"

        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:onClick="onClickButton"

            android:text="@string/One"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
            android:backgroundTint="@color/btnNumbers"
        />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:onClick="onClickButton"

            android:text="@string/Two"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
            android:backgroundTint="@color/btnNumbers"
        />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:onClick="onClickButton"

            android:text="@string/Three"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperator"

            android:text="@string/Minus"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:onClick="onDecimalPoint"

            android:text="@string/Dot"
            android:textStyle="bold"
            android:paddingVertical="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:onClick="onClickButton"

            android:text="@string/Zero"
            android:textStyle="bold"
            android:paddingVertical="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:onClick="onClear"

            android:text="@string/Clear"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOperator"

            android:text="@string/Plus"
            android:textStyle="bold"
            android:padding="20sp"
            android:textSize="30sp"
        />

    </LinearLayout>

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="onEqual"

        android:text="@string/Equal"
        android:padding="20dp"
        android:textStyle="bold"
        android:textSize="30dp"

        android:layout_gravity="end|bottom"
    />

</LinearLayout>